Save before merging remote

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,6 @@ classes/
 
 .settings/
 .vscode/
-bin/
 .classpath
 .project
 
@@ -38,3 +37,7 @@ hs_err_*.log
 replay_*.log
 *.hprof
 *.jfr
+
+# github
+
+.github
